@@ -1,2 +1,13 @@
 # ugentopoly
 ugentopoly - project objprog
+
+
+# windows
+> download the "libraries" folder and the "ugentopoly.jar"
+
+
+> open "command prompt" and type the following:
+
+> java -p "C:\[...]\libraries" --add-modules ALL-MODULE-PATH -cp "C:\[...]\ugentopoly.jar" be.ugent.objprog.ugentopoly.Ugentopoly
+
+> but replace the [...] with your own folders
